--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" href="assets/icons/Tablogo.png">
-        <link rel="stylesheet" href="https://kit.fontawesome.com/2d90eb6cba.css" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/2d90eb6cba.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"> 
@@ -17,8 +17,10 @@
             <div class="nav-container">
                 <div class="nav-wrapper nav-header">
                     <div class="logowrp">
-                        <img class="logo" src="assets/icons/logo.png" alt="">
-                        <h1 class="font">MyAnime</h1>
+                        <a href="index.html">
+                            <img class="logo" src="assets/icons/logo.png" alt="">
+                            <h1 class="font">My<span>Anime</span></h1>
+                        </a>
                     </div>
                     <nav class="nav font">
                         <a href="#">მთავარი</a>
